--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/nunjucks": "^3.1.4",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "node-fetch": "^2.6.1",
+    "nunjucks": "^3.2.3",
     "slug": "^3.3.5",
     "uuid": "^8.3.0"
   },
   "scripts": {
     "build": "tsc",
     "dev": "nodemon",
+    "populate-db": "node src/scripts/populate-db.js",
     "format": "prettier --write .",
     "lint": "eslint \"{src,tests}/**/*.{js,ts,jsx,tsx}\"",
     "start": "node dist/index.js",
-    "test": "jest --runInBand"
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest --runInBand tests/unit",
+    "test:e2e": "jest --runInBand tests/e2e"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
@@ -32,6 +37,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "taiko": "^1.2.4",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
